--- a/NewBee/Views/Decks/Details.cshtml
+++ b/NewBee/Views/Decks/Details.cshtml
@@ -18,6 +18,26 @@
         </dd>
     </dl>
 </div>
+
+@foreach (var card in Model.Cards)
+{
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => card.Question)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => card.Question)
+        </dd>
+    </dl>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => card.Answer)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => card.Answer)
+        </dd>
+    </dl>
+}
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
