--- a/NewBee/Views/Decks/Details.cshtml
+++ b/NewBee/Views/Decks/Details.cshtml
@@ -28,19 +28,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => card.Question)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => card.Answer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => card.Answer)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => card.Answer)
-        </dt>
+        <a asp-controller="Flashcards" asp-action="Details" asp-route-id="@card.Id">Details</a>
         <a asp-controller="Flashcards" asp-action="Edit" asp-route-id="@card.Id">Edit</a> |
     </dl>
 }
 <div>
+    <a asp-controller="Flashcards" asp-action="Create" asp-route-id="@Model?.Id">Create New</a>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
