--- a/NewBee/Views/Flashcards/Details.cshtml
+++ b/NewBee/Views/Flashcards/Details.cshtml
@@ -26,5 +26,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Decks" asp-action="Details" asp-route-id="@Model?.DeckId">Back to List</a>
 </div>
